# qt-service

./: CMakeLists.txt  README.md
include/: service.h
lib/: CMakeLists.txt  qtservice_win.cpp
src/: interactive.cpp  main.cpp  service.cpp
